# bedrock-agentcore

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  ISSUE_SOLVE.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: developer.agent.md  docs-writer.agent.md  reviewer.agent.md  tester.agent.md
.github/instructions/: docs.instructions.md  examples.instructions.md  source.instructions.md  tests.instructions.md
.github/skills/check-and-test/: SKILL.md
.github/skills/strands-api-lookup/: SKILL.md
.github/workflows/: publish.yml
docs/: Chapter_01.md  Chapter_02.md  Chapter_03.md  Chapter_04.md  Chapter_05.md  Chapter_06.md  Chapter_07.md  Chapter_08.md  Chapter_09.md  Quick_Recipes.md  README.md
examples/: README.md
examples/01_quick_start/: README.md  config.yaml  main.py
examples/02_deploy/: README.md  config.yaml  main.py  pyproject.toml
examples/03_multimodal/: README.md  client.py  config.yaml  main.py
src/strands_compose_agentcore/: __init__.py  _utils.py  app.py  media.py  media_formats.py  payload.py  session.py  types.py
src/strands_compose_agentcore/cli/: __init__.py  client.py  dev.py  utils.py
src/strands_compose_agentcore/client/: __init__.py  agentcore.py  local.py  repl.py  utils.py
tasks/: check.just  test.just
tests/: __init__.py  conftest.py  test_app.py  test_app_invoke.py  test_cli.py  test_client_agentcore.py  test_client_repl.py  test_integration.py  test_local_client.py  test_media.py  test_media_formats.py  test_payload.py  test_repl.py  test_sse.py
